Clasificación de ccaa y gráficos de visualización

--- a/02_Transform.ipynb
+++ b/02_Transform.ipynb
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 85,
    "id": "8c1f5e0b-4cca-47ae-8626-97992cfdbb14",
    "metadata": {},
    "outputs": [
@@ -509,43 +509,49 @@
        "      <th>CCAA_DESTINO</th>\n",
        "      <th>TIPO_VISITANTE_GROUP</th>\n",
        "      <th>TOTAL</th>\n",
+       "      <th>TIPO_CCAA</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>13</th>\n",
        "      <td>2018</td>\n",
-       "      <td>Andalucía</td>\n",
-       "      <td>Excursionista</td>\n",
-       "      <td>149</td>\n",
+       "      <td>Cataluña</td>\n",
+       "      <td>Turista</td>\n",
+       "      <td>325</td>\n",
+       "      <td>Tradicional</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2018</td>\n",
+       "      <th>51</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Cataluña</td>\n",
+       "      <td>Turista</td>\n",
+       "      <td>324</td>\n",
+       "      <td>Tradicional</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>205</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>Cataluña</td>\n",
+       "      <td>Turista</td>\n",
+       "      <td>323</td>\n",
+       "      <td>Tradicional</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>186</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>Cataluña</td>\n",
+       "      <td>Turista</td>\n",
+       "      <td>320</td>\n",
+       "      <td>Tradicional</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>2019</td>\n",
        "      <td>Andalucía</td>\n",
        "      <td>Turista</td>\n",
-       "      <td>314</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>Aragón</td>\n",
-       "      <td>Excursionista</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>Aragón</td>\n",
-       "      <td>Turista</td>\n",
-       "      <td>175</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>Canarias</td>\n",
-       "      <td>Excursionista</td>\n",
-       "      <td>76</td>\n",
+       "      <td>318</td>\n",
+       "      <td>Tradicional</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -553,71 +559,91 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>231</th>\n",
-       "      <td>2025</td>\n",
-       "      <td>La Rioja</td>\n",
-       "      <td>Turista</td>\n",
-       "      <td>28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>232</th>\n",
-       "      <td>2025</td>\n",
+       "      <th>29</th>\n",
+       "      <td>2018</td>\n",
        "      <td>Melilla</td>\n",
-       "      <td>Turista</td>\n",
-       "      <td>2</td>\n",
+       "      <td>Excursionista</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Otra</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>233</th>\n",
-       "      <td>2025</td>\n",
-       "      <td>País Vasco</td>\n",
-       "      <td>Turista</td>\n",
-       "      <td>111</td>\n",
+       "      <th>156</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>Castilla-La Mancha</td>\n",
+       "      <td>Excursionista</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Otra</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>234</th>\n",
-       "      <td>2025</td>\n",
+       "      <th>141</th>\n",
+       "      <td>2021</td>\n",
        "      <td>Principado de Asturias</td>\n",
-       "      <td>Turista</td>\n",
-       "      <td>51</td>\n",
+       "      <td>Excursionista</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Otra</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>235</th>\n",
-       "      <td>2025</td>\n",
-       "      <td>Región de Murcia</td>\n",
-       "      <td>Turista</td>\n",
-       "      <td>83</td>\n",
+       "      <th>119</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>Castilla-La Mancha</td>\n",
+       "      <td>Excursionista</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Otra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>La Rioja</td>\n",
+       "      <td>Excursionista</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Emergente</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>236 rows × 4 columns</p>\n",
+       "<p>236 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      AÑO            CCAA_DESTINO TIPO_VISITANTE_GROUP  TOTAL\n",
-       "0    2018               Andalucía        Excursionista    149\n",
-       "1    2018               Andalucía              Turista    314\n",
-       "2    2018                  Aragón        Excursionista     24\n",
-       "3    2018                  Aragón              Turista    175\n",
-       "4    2018                Canarias        Excursionista     76\n",
-       "..    ...                     ...                  ...    ...\n",
-       "231  2025                La Rioja              Turista     28\n",
-       "232  2025                 Melilla              Turista      2\n",
-       "233  2025              País Vasco              Turista    111\n",
-       "234  2025  Principado de Asturias              Turista     51\n",
-       "235  2025        Región de Murcia              Turista     83\n",
+       "      AÑO            CCAA_DESTINO TIPO_VISITANTE_GROUP  TOTAL    TIPO_CCAA\n",
+       "13   2018                Cataluña              Turista    325  Tradicional\n",
+       "51   2019                Cataluña              Turista    324  Tradicional\n",
+       "205  2024                Cataluña              Turista    323  Tradicional\n",
+       "186  2023                Cataluña              Turista    320  Tradicional\n",
+       "39   2019               Andalucía              Turista    318  Tradicional\n",
+       "..    ...                     ...                  ...    ...          ...\n",
+       "29   2018                 Melilla        Excursionista      1         Otra\n",
+       "156  2022      Castilla-La Mancha        Excursionista      1         Otra\n",
+       "141  2021  Principado de Asturias        Excursionista      1         Otra\n",
+       "119  2021      Castilla-La Mancha        Excursionista      1         Otra\n",
+       "136  2021                La Rioja        Excursionista      1    Emergente\n",
        "\n",
-       "[236 rows x 4 columns]"
+       "[236 rows x 5 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "visitantes_ccaa"
+    "ccaa_tradicionales = [\"Cataluña\", \"Andalucía\", \"Comunidad Valenciana\", \"Illes Balears\", \"Madrid\", \"Canarias\"]\n",
+    "ccaa_alternativas = [\"Galicia\", \"Cantabria\", \"Aragón\", \"Extremadura\", \"Castilla y León\", \"La Rioja\", \"Asturias\", \"Navarra\", \"País Vasco\"]\n",
+    "\n",
+    "def clasificar_ccaa(ccaa):\n",
+    "    if ccaa in ccaa_tradicionales:\n",
+    "        return \"Tradicional\"\n",
+    "    elif ccaa in ccaa_alternativas:\n",
+    "        return \"Emergente\"\n",
+    "    else:\n",
+    "        return \"Otra\"\n",
+    "\n",
+    "visitantes_ccaa[\"TIPO_CCAA\"] = visitantes_ccaa[\"CCAA_DESTINO\"].apply(clasificar_ccaa)\n",
+    "\n",
+    "visitantes_ccaa.to_csv(\"./exports/visitantes_ccaa.csv\", index=False)\n",
+    "visitantes_ccaa.sort_values(by=\"TOTAL\", ascending=False)"
    ]
   },
   {
@@ -972,11 +998,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "33f8cf63-536c-44d2-9c1a-cdcb3f85535b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "visitantes_ccaa_pivot.to_csv(\"./exports/visitantes_ccaa_pivot.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
