Crecimiento-decrecimiento ultimos años disponibles por tipo de visitante y tipo de ccaa

--- a/02_Transform.ipynb
+++ b/02_Transform.ipynb
@@ -648,6 +648,184 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "57b14a24-45c9-45ed-8b2e-426126a0916a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calcular el crecimiento de los tipo de turistas por cada tipo de CCAA(Emergente vs Tradicional)\n",
+    "# 1. Filtrar el tipo de visitantes y los años (???solo hasta 2022 porque a partir de ese año no existen \"Excursionistas\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "f030fe1a-ba34-4a60-820f-ee1c3bf6e4da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>TIPO_CCAA</th>\n",
+       "      <th>Emergente</th>\n",
+       "      <th>Otra</th>\n",
+       "      <th>Tradicional</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AÑO</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018</th>\n",
+       "      <td>1275</td>\n",
+       "      <td>1268</td>\n",
+       "      <td>1070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019</th>\n",
+       "      <td>1317</td>\n",
+       "      <td>1244</td>\n",
+       "      <td>1051</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020</th>\n",
+       "      <td>875</td>\n",
+       "      <td>846</td>\n",
+       "      <td>753</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021</th>\n",
+       "      <td>1181</td>\n",
+       "      <td>1094</td>\n",
+       "      <td>934</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022</th>\n",
+       "      <td>1242</td>\n",
+       "      <td>1205</td>\n",
+       "      <td>1031</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023</th>\n",
+       "      <td>1363</td>\n",
+       "      <td>1229</td>\n",
+       "      <td>1080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024</th>\n",
+       "      <td>1251</td>\n",
+       "      <td>1208</td>\n",
+       "      <td>1030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025</th>\n",
+       "      <td>507</td>\n",
+       "      <td>483</td>\n",
+       "      <td>440</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "TIPO_CCAA  Emergente  Otra  Tradicional\n",
+       "AÑO                                    \n",
+       "2018            1275  1268         1070\n",
+       "2019            1317  1244         1051\n",
+       "2020             875   846          753\n",
+       "2021            1181  1094          934\n",
+       "2022            1242  1205         1031\n",
+       "2023            1363  1229         1080\n",
+       "2024            1251  1208         1030\n",
+       "2025             507   483          440"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "turistas = visitantes_ccaa[(visitantes_ccaa[\"TIPO_VISITANTE_GROUP\"] == \"Turista\")]\n",
+    "turistas_resumen = (\n",
+    "    turistas.groupby([\"AÑO\", \"TIPO_CCAA\"])[\"TOTAL\"]\n",
+    "    .sum()\n",
+    "    .reset_index()\n",
+    ")\n",
+    "\n",
+    "turistas_pivot = turistas_resumen.pivot(\n",
+    "    index=\"AÑO\",\n",
+    "    columns=\"TIPO_CCAA\",\n",
+    "    values=\"TOTAL\"\n",
+    ")\n",
+    "\n",
+    "turistas_pivot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "b3752955-0428-4604-9c66-9000f798f3c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TIPO_CCAA\n",
+       "Emergente     -1.88\n",
+       "Otra          -4.73\n",
+       "Tradicional   -3.74\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crecimiento_abs = turistas_pivot.loc[2024] - turistas_pivot.loc[2018]\n",
+    "crecimiento_porcentaje = ((crecimiento_abs / turistas_pivot.loc[2018]) * 100).round(2)\n",
+    "\n",
+    "crecimiento_porcentaje"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "914c1adf-1549-46a9-bd52-07bd01fc8eb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visitantes_ccaa_pivot = visitantes_ccaa.groupby([\"AÑO\", \"TIPO_VISITANTE_GROUP\", \"TIPO_CCAA\"])[\"TOTAL\"].sum().reset_index()\n",
+    "visitantes_ccaa_pivot\n",
+    "\n",
+    "visitantes_ccaa_pivot.to_csv(\"./exports/visitantes_ccaa_pivot.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 61,
    "id": "1b296ab3-8fc9-4f90-83b4-319ffc6b8138",
    "metadata": {},
@@ -818,20 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "d671b2b8-726e-4c5f-8a6f-074e163f4103",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "visitantes_ccaa_pivot = visitantes_ccaa.pivot_table(index=[\"AÑO\", \"CCAA_DESTINO\"], columns=\"TIPO_VISITANTE_GROUP\", values=\"TOTAL\", fill_value=0).reset_index()\n",
-    "visitantes_ccaa_pivot[\"TOTAL\"] = (visitantes_ccaa_pivot[\"Turista\"] + visitantes_ccaa_pivot[\"Excursionista\"])\n",
-    "\n",
-    "visitantes_ccaa_pivot.sort_values(by=[\"AÑO\", \"TOTAL\"], ascending=[True, False], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 126,
    "id": "0bc42f5f-cc00-4006-9f07-05c29e9fed05",
    "metadata": {},
    "outputs": [
@@ -848,152 +1013,202 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead th {\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
+       "    <tr>\n",
        "      <th>TIPO_VISITANTE_GROUP</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Excursionista</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Turista</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TIPO_CCAA</th>\n",
+       "      <th>Emergente</th>\n",
+       "      <th>Otra</th>\n",
+       "      <th>Tradicional</th>\n",
+       "      <th>Emergente</th>\n",
+       "      <th>Otra</th>\n",
+       "      <th>Tradicional</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>AÑO</th>\n",
-       "      <th>CCAA_DESTINO</th>\n",
-       "      <th>Excursionista</th>\n",
-       "      <th>Turista</th>\n",
-       "      <th>TOTAL</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>Cataluña</td>\n",
-       "      <td>164.0</td>\n",
-       "      <td>325.0</td>\n",
-       "      <td>489.0</td>\n",
+       "      <th>2018</th>\n",
+       "      <td>230.0</td>\n",
+       "      <td>349.0</td>\n",
+       "      <td>498.0</td>\n",
+       "      <td>1275.0</td>\n",
+       "      <td>1268.0</td>\n",
+       "      <td>1070.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>Andalucía</td>\n",
-       "      <td>149.0</td>\n",
-       "      <td>314.0</td>\n",
-       "      <td>463.0</td>\n",
+       "      <th>2019</th>\n",
+       "      <td>268.0</td>\n",
+       "      <td>353.0</td>\n",
+       "      <td>519.0</td>\n",
+       "      <td>1317.0</td>\n",
+       "      <td>1244.0</td>\n",
+       "      <td>1051.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>Comunidad de Madrid</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>315.0</td>\n",
+       "      <th>2020</th>\n",
+       "      <td>157.0</td>\n",
+       "      <td>226.0</td>\n",
+       "      <td>214.0</td>\n",
+       "      <td>875.0</td>\n",
+       "      <td>846.0</td>\n",
+       "      <td>753.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021</th>\n",
+       "      <td>185.0</td>\n",
+       "      <td>257.0</td>\n",
+       "      <td>288.0</td>\n",
+       "      <td>1181.0</td>\n",
+       "      <td>1094.0</td>\n",
+       "      <td>934.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022</th>\n",
+       "      <td>216.0</td>\n",
+       "      <td>298.0</td>\n",
        "      <td>379.0</td>\n",
+       "      <td>1242.0</td>\n",
+       "      <td>1205.0</td>\n",
+       "      <td>1031.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>Comunitat Valenciana</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>309.0</td>\n",
-       "      <td>376.0</td>\n",
+       "      <th>2023</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1363.0</td>\n",
+       "      <td>1229.0</td>\n",
+       "      <td>1080.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>País Vasco</td>\n",
-       "      <td>84.0</td>\n",
-       "      <td>280.0</td>\n",
-       "      <td>364.0</td>\n",
+       "      <th>2024</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1251.0</td>\n",
+       "      <td>1208.0</td>\n",
+       "      <td>1030.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145</th>\n",
-       "      <td>2025</td>\n",
-       "      <td>Comunidad Foral de Navarra</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>52.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>154</th>\n",
-       "      <td>2025</td>\n",
-       "      <td>Principado de Asturias</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>51.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>148</th>\n",
-       "      <td>2025</td>\n",
-       "      <td>Extremadura</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>42.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>151</th>\n",
-       "      <td>2025</td>\n",
-       "      <td>La Rioja</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>28.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>152</th>\n",
-       "      <td>2025</td>\n",
-       "      <td>Melilla</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <th>2025</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>507.0</td>\n",
+       "      <td>483.0</td>\n",
+       "      <td>440.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>156 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "TIPO_VISITANTE_GROUP   AÑO                CCAA_DESTINO  Excursionista  \\\n",
-       "6                     2018                    Cataluña          164.0   \n",
-       "0                     2018                   Andalucía          149.0   \n",
-       "9                     2018         Comunidad de Madrid           64.0   \n",
-       "10                    2018        Comunitat Valenciana           67.0   \n",
-       "16                    2018                  País Vasco           84.0   \n",
-       "..                     ...                         ...            ...   \n",
-       "145                   2025  Comunidad Foral de Navarra            0.0   \n",
-       "154                   2025      Principado de Asturias            0.0   \n",
-       "148                   2025                 Extremadura            0.0   \n",
-       "151                   2025                    La Rioja            0.0   \n",
-       "152                   2025                     Melilla            0.0   \n",
+       "TIPO_VISITANTE_GROUP Excursionista                      Turista          \\\n",
+       "TIPO_CCAA                Emergente   Otra Tradicional Emergente    Otra   \n",
+       "AÑO                                                                       \n",
+       "2018                         230.0  349.0       498.0    1275.0  1268.0   \n",
+       "2019                         268.0  353.0       519.0    1317.0  1244.0   \n",
+       "2020                         157.0  226.0       214.0     875.0   846.0   \n",
+       "2021                         185.0  257.0       288.0    1181.0  1094.0   \n",
+       "2022                         216.0  298.0       379.0    1242.0  1205.0   \n",
+       "2023                           NaN    NaN         NaN    1363.0  1229.0   \n",
+       "2024                           NaN    NaN         NaN    1251.0  1208.0   \n",
+       "2025                           NaN    NaN         NaN     507.0   483.0   \n",
        "\n",
-       "TIPO_VISITANTE_GROUP  Turista  TOTAL  \n",
-       "6                       325.0  489.0  \n",
-       "0                       314.0  463.0  \n",
-       "9                       315.0  379.0  \n",
-       "10                      309.0  376.0  \n",
-       "16                      280.0  364.0  \n",
-       "..                        ...    ...  \n",
-       "145                      52.0   52.0  \n",
-       "154                      51.0   51.0  \n",
-       "148                      42.0   42.0  \n",
-       "151                      28.0   28.0  \n",
-       "152                       2.0    2.0  \n",
-       "\n",
-       "[156 rows x 5 columns]"
+       "TIPO_VISITANTE_GROUP              \n",
+       "TIPO_CCAA            Tradicional  \n",
+       "AÑO                               \n",
+       "2018                      1070.0  \n",
+       "2019                      1051.0  \n",
+       "2020                       753.0  \n",
+       "2021                       934.0  \n",
+       "2022                      1031.0  \n",
+       "2023                      1080.0  \n",
+       "2024                      1030.0  \n",
+       "2025                       440.0  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "visitantes_ccaa_pivot"
+    "pivot_table = visitantes_ccaa_pivot.pivot_table(\n",
+    "    index=\"AÑO\",\n",
+    "    columns=[\"TIPO_VISITANTE_GROUP\", \"TIPO_CCAA\"],\n",
+    "    values=\"TOTAL\"\n",
+    ")\n",
+    "\n",
+    "pivot_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "d7bbc6d3-416e-4632-85e4-803b9676c0f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Excursionista en CCAA Emergente: -6.09% de crecimiento entre 2018 y 2022\n",
+      "Excursionista en CCAA Otra: -14.61% de crecimiento entre 2018 y 2022\n",
+      "Excursionista en CCAA Tradicional: -23.90% de crecimiento entre 2018 y 2022\n",
+      "Turista en CCAA Emergente: -2.59% de crecimiento entre 2018 y 2022\n",
+      "Turista en CCAA Otra: -4.97% de crecimiento entre 2018 y 2022\n",
+      "Turista en CCAA Tradicional: -3.64% de crecimiento entre 2018 y 2022\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MultiIndex([('Excursionista',   'Emergente'),\n",
+       "            ('Excursionista',        'Otra'),\n",
+       "            ('Excursionista', 'Tradicional'),\n",
+       "            (      'Turista',   'Emergente'),\n",
+       "            (      'Turista',        'Otra'),\n",
+       "            (      'Turista', 'Tradicional')],\n",
+       "           names=['TIPO_VISITANTE_GROUP', 'TIPO_CCAA'])"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valores = pivot_table.loc[2018:2022].values  # solo hasta 2022\n",
+    "columnas = pivot_table.columns\n",
+    "\n",
+    "crecimiento_porcentaje = ((valores[-1] - valores[0]) / valores[0]) * 100\n",
+    "\n",
+    "for i, col in enumerate(columnas):\n",
+    "    tipo, ccaa = col\n",
+    "    print(f\"{tipo} en CCAA {ccaa}: {crecimiento_pct[i]:.2f}% de crecimiento entre 2018 y 2022\")\n"
    ]
   },
   {
