Añadido endpoint actividades_ocio

--- a/02_Transform.ipynb
+++ b/02_Transform.ipynb
@@ -1220,6 +1220,75 @@
    "source": [
     "visitantes_ccaa_pivot.to_csv(\"./exports/visitantes_ccaa_pivot.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c13cbdd-89eb-4141-9c9e-727bf9198466",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tipos de ACTIVIDADES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "d0803079-653c-4b7d-987f-4da682b42db9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Cultura, teatro y danza',\n",
+       " 'Música',\n",
+       " 'Actividades infantiles',\n",
+       " 'Museo y exposiciones',\n",
+       " 'Cursos',\n",
+       " 'Gastronomía',\n",
+       " 'Musicales',\n",
+       " 'Deportes y aventuras',\n",
+       " 'Cine',\n",
+       " 'Conferencias',\n",
+       " 'Parques temáticos',\n",
+       " 'Ferias']"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datasets[\"ACTIVIDADES_OCIO_DL\"][\"CATEGORIA\"].unique().tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "eefc91fe-2eef-4111-93c9-79d0c091628c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "actividades_ocio = datasets[\"ACTIVIDADES_OCIO_DL\"]\n",
+    "actividades_ocio.to_csv(\"./exports/actividades_ocio\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d11df940-714f-4349-a1d5-3b8e1f325e62",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d2a14da-ed72-402b-9dfe-4d6368eab1f6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
